# rust-cli-template

./: README.md
.github/workflows/: build.yml
template/: .gitignore  Cargo.toml  flake.nix
template/.github/workflows/: cd.yml
template/src/: main.rs
