[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "{{project-description}}"
repository = "https://github.com/{{gh-username}}/{{project-name}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
mimalloc = { version = "0.1.39" }

[profile.release]
lto = true
codegen-units = 1
